Removed the MaxPermSize argument from the ReposeValveLauncher test harness since it is no longer used from Java 8 forward.